# fieldqkit

./: .gitignore  .quantum_hw.example.yaml  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  PR_公众号草稿.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES  ______find_my_file.py  cloud_simulator_integration.md  count-lines.bat  demo_agent.py  generate_large_samples.py  generate_test_samples.py  index.html  mkdocs.yml  optimize-torch_bf.py  overview.md  pyproject.toml  review.txt  sitemap.xml  test_decomposition.py  test_fieldquantum_expectation.py  update_hardware_lists.py  validate_with_run_auto.py
.claude/: settings.json  settings.local.json
.github/workflows/: docs.yml  tests.yml
algorithms/: index.html
algorithms/ansatz_templates/: index.html
algorithms/circuit_compression/: index.html
algorithms/optimizer_utils/: index.html
algorithms/qaoa_runner/: index.html
algorithms/qml/: index.html
algorithms/qml_encoding/: index.html
algorithms/qml_runner/: index.html
algorithms/shadow_tomography/: index.html
algorithms/vqe_runner/: index.html
api/: index.html
api/Backend/: index.html
api/QuantumHardwareClient/: index.html
api/Task/: index.html
api/cqlib/: index.html
api/hardware_discovery/: index.html
api/platform_credentials/: index.html
api/provider_runtime/: index.html
api/providers/: index.html
api/run_with_backend/: index.html
circuit/: index.html
compile/: index.html
configuration/: index.html
docs/: COMPATIBILITY_REPORT_2026-03-04.md  DOCUMENTATION.md  README.md  ROADMAP.md  configuration.md  refactor_proposals_C_api_layer.md  wsl_chemistry_workflow.md
docs/api/: Task.md  (+9 more)
examples/: demo.py  demo_backend.ipynb  demo_calibrate.py  demo_circuit_core.ipynb  demo_clifford_fitting.ipynb  demo_cqlib.ipynb  demo_cqlib_adapt.ipynb  demo_full.ipynb  demo_noisy_simulation.ipynb  demo_qaoa.ipynb  demo_qml.ipynb  demo_qml_iris.ipynb  demo_qnn_bas.ipynb  demo_qnn_unsupervised.ipynb  demo_rb.py  demo_readout_zne.ipynb  demo_shadow.ipynb  demo_tomography.py  demo_vqe.ipynb  demo_vqe_f2_12q.ipynb  demo_vqe_f2_12q_compression-LAPTOP-ELJB3GFH.ipynb  demo_vqe_f2_12q_compression-copy.ipynb  demo_vqe_f2_12q_compression.ipynb  demo_vqe_h2.ipynb  demo_vqe_h2_2q.ipynb  demo_vqe_h2_4q.ipynb  demo_vqe_h2_4q_scan.ipynb  demo_vqe_lih_6q.ipynb  qaoa_demo.py  shadow_demo.py  vqe_demo.py
scripts/: count-lines.ps1  demo_origin_wk_c180.py  e2e_12qubit_layout_test.py  e2e_hardware_test.py  export_f2_terms_wsl.py  export_h2_terms_wsl.py  export_lih_terms_wsl.py  probe_origin.py  probe_origin_endian.py  probe_origin_raw.py  run_wsl_export_f2.sh  run_wsl_export_h2.sh  run_wsl_export_h2_2q.sh  run_wsl_export_lih.sh  test_endianness_all_providers.py
search/: search_index.json
test_data/: expectation_01_input.json  expectation_01_output.json  expectation_02_input.json  expectation_02_output.json  expectation_03_input.json  expectation_03_output.json  expectation_04_input.json  expectation_04_output.json  expectation_05_input.json  expectation_05_output.json  expectation_06_input.json  expectation_06_output.json  expectation_07_input.json  expectation_07_output.json  expectation_08_input.json  expectation_08_output.json  expectation_09_input.json  expectation_09_output.json  expectation_10_input.json  expectation_10_output.json  expectation_11_input.json  expectation_11_output.json  expectation_12_input.json  expectation_12_output.json  expectation_13_input.json  expectation_13_output.json  expectation_14_input.json  expectation_14_output.json  expectation_15_input.json  expectation_15_output.json  expectation_16_input.json  expectation_16_output.json  expectation_17_input.json  expectation_17_output.json  expectation_18_input.json  expectation_18_output.json  expectation_19_input.json  expectation_19_output.json  expectation_20_input.json  expectation_20_output.json  (+19 more)
tests/: test_algorithms.py  test_algorithms_provider_symmetry.py  test_api.py  test_api_exports_unified.py  test_api_provider_runtime.py  test_api_run_auto_unified.py  test_api_unified_backend.py  test_api_unified_task.py  test_backend_migration.py  test_calibration.py  test_circuit.py  test_circuit_migration.py  test_circuit_openqasm_advanced.py  test_circuit_qasm.py  test_circuit_refactor.py  test_circuit_safety.py  test_circuit_to_qcis.py  test_client_batch.py  test_compile_decompose.py  test_compile_full_pipeline.py  test_compile_passes.py  test_compile_pipeline.py  test_core.py  test_credentials.py  test_fieldquantum.py  test_noise_channels.py  test_observable_readout_switching.py  test_observables.py  test_optimize_compress.py  test_qaoa.py  test_qasm_parsing_modules.py  test_qml.py  test_sim.py  test_sim_interface_routing.py  test_sim_mpo.py  test_sim_mps.py  test_tencent_provider.py  test_transpiler_migration.py  test_vqe_autograd.py  test_vqe_compile_reuse.py  (+2 more)
(+392 files in other folders)
